# event_management

./: .dockerignore  .env.example  .gitignore  README.md  distribution.md  docker-compose.yml  pyproject.toml
alembic/versions/: f2d045474ad6_initial_tables.py
backend/: Dockerfile  README.md  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: f2d045474ad6_initial_tables.py
backend/src/config/: container.py
backend/src/domain/registrations/: registration_exceptions.py
backend/src/domain/sessions/: session.py  session_exceptions.py
backend/src/domain/users/: user_exceptions.py
backend/src/infrastructure/database/: seed.py
backend/src/infrastructure/http/: auth_dependencies.py  (+5 more)
frontend/: README.md  index.html  nginx.conf  package.json
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: EventDetailView.vue  EventsView.vue  LoginView.vue  RegistrationsView.vue  UsersView.vue
src/: main.py
src/config/: container.py
src/domain/events/: event.py  event_exceptions.py
src/domain/registrations/: registration.py  registration_status.py
src/domain/sessions/: session_status.py
src/domain/users/: user.py  user_role.py
src/infrastructure/database/: session.py
src/infrastructure/http/: auth_dependencies.py  database_dependencies.py  event_dependencies.py  exception_handlers.py  registration_dependencies.py  session_dependencies.py  user_dependencies.py
tests/: conftest.py
tests/domain/registrations/: test_registration.py
tests/domain/sessions/: test_session.py
(+87 files in other folders)
