[tool.poetry]
name = "event-management"
version = "0.1.0"
description = "Event management API built with FastAPI and hexagonal architecture"
authors = ["juan-omni <juan.vallejo@omni.pro>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
uvicorn = { version = "^0.46.0", extras = ["standard"] }
sqlmodel = "^0.0.38"
sqlalchemy = { version = "^2.0.49", extras = ["asyncio"] }
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pydantic = "^2.13.4"
email-validator = "^2.3.0"
bcrypt = "^5.0.0"
pyjwt = "^2.12.1"
python-dotenv = "^1.2.2"
python-multipart = "^0.0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
